--- a/Covertype.ipynb
+++ b/Covertype.ipynb
@@ -49,23 +49,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lWDpzjkgIJGi",
-        "outputId": "5071326d-d4cd-4559-819e-09efa2331ebc"
+        "outputId": "a83a9c79-b41e-468e-e5d3-295617a28672"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2023-09-30 09:50:07--  http://archive.ics.uci.edu/static/public/31/covertype.zip\n",
+            "--2023-11-11 17:28:03--  http://archive.ics.uci.edu/static/public/31/covertype.zip\n",
             "Resolving archive.ics.uci.edu (archive.ics.uci.edu)... 128.195.10.252\n",
             "Connecting to archive.ics.uci.edu (archive.ics.uci.edu)|128.195.10.252|:80... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: unspecified\n",
             "Saving to: ‘covertype.zip’\n",
             "\n",
-            "covertype.zip           [            <=>     ]  10.73M  4.74MB/s    in 2.3s    \n",
+            "covertype.zip           [   <=>              ]  10.73M  2.30MB/s    in 7.5s    \n",
             "\n",
-            "2023-09-30 09:50:09 (4.74 MB/s) - ‘covertype.zip’ saved [11251206]\n",
+            "2023-11-11 17:28:11 (1.42 MB/s) - ‘covertype.zip’ saved [11251206]\n",
             "\n",
             "<bound method NDFrame.head of         Elevation  Aspect  Slope  Horizontal Distance To Hydrology  \\\n",
             "0            2590      56      2                               212   \n",
@@ -173,7 +173,7 @@
           "height": 478
         },
         "id": "j8x1X3D35B9t",
-        "outputId": "d85ddfba-4324-415a-e667-edcac42bd18b"
+        "outputId": "3fa4687c-dbd8-4dc8-adce-4dbd337599e7"
       },
       "outputs": [
         {
@@ -217,7 +217,7 @@
           "height": 478
         },
         "id": "vq6pFp6Tt8kl",
-        "outputId": "abeec569-582b-4414-b1aa-6502db98e71f"
+        "outputId": "154249a2-0728-48c8-fcf9-04111f296881"
       },
       "outputs": [
         {
@@ -375,27 +375,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0RRDLyw7fSue",
-        "outputId": "784284b8-f6fe-4e72-a6c0-b8fc0e6a70a8"
+        "outputId": "eedfee6e-758b-4bfb-c2aa-f29bd87b9db3"
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/sklearn/model_selection/_search.py:305: UserWarning: The total space of parameters 4 is smaller than n_iter=10. Running 4 iterations. For exhaustive searches, use GridSearchCV.\n",
-            "  warnings.warn(\n"
-          ]
-        },
-        {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Fitting 3 folds for each of 4 candidates, totalling 12 fits\n"
           ]
         },
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.10/dist-packages/joblib/externals/loky/process_executor.py:752: UserWarning: A worker stopped while some jobs were given to the executor. This can be caused by a too short worker timeout or by a memory leak.\n",
             "  warnings.warn(\n"
@@ -407,17 +405,17 @@
           "text": [
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           1     0.9708    0.9638    0.9673     28337\n",
-            "           2     0.9682    0.9574    0.9627     28260\n",
-            "           3     0.9943    0.9963    0.9953     28330\n",
-            "           4     0.9978    0.9999    0.9988     28454\n",
-            "           5     0.9939    0.9996    0.9968     28162\n",
-            "           6     0.9936    0.9987    0.9961     28488\n",
-            "           7     0.9963    0.9998    0.9980     28280\n",
+            "           1     0.9704    0.9639    0.9671     28245\n",
+            "           2     0.9677    0.9565    0.9621     28372\n",
+            "           3     0.9942    0.9961    0.9952     28132\n",
+            "           4     0.9977    1.0000    0.9989     28371\n",
+            "           5     0.9945    0.9998    0.9972     28443\n",
+            "           6     0.9933    0.9986    0.9959     28461\n",
+            "           7     0.9964    0.9998    0.9981     28287\n",
             "\n",
-            "    accuracy                         0.9879    198311\n",
-            "   macro avg     0.9878    0.9879    0.9879    198311\n",
-            "weighted avg     0.9879    0.9879    0.9879    198311\n",
+            "    accuracy                         0.9878    198311\n",
+            "   macro avg     0.9877    0.9878    0.9878    198311\n",
+            "weighted avg     0.9877    0.9878    0.9878    198311\n",
             "\n"
           ]
         }
@@ -428,10 +426,10 @@
         "              'min_samples_leaf': [2, 4],}\n",
         "\n",
         "model = RandomForestClassifier()\n",
-        "model_random = RandomizedSearchCV(estimator=model, param_distributions=model_grid, n_iter=10, cv=3, verbose=2, n_jobs=-1)\n",
+        "model_search = GridSearchCV(estimator=model, param_grid=model_grid, cv=3, verbose=3, n_jobs=2)\n",
         "\n",
-        "model_random.fit(x_train, y_train)\n",
-        "predicted = model_random.predict(x_test)\n",
+        "model_search.fit(x_train, y_train)\n",
+        "predicted = model_search.predict(x_test)\n",
         "print(metrics.classification_report(y_test, predicted, digits=4))"
       ]
     },
