--- a/Covertype.ipynb
+++ b/Covertype.ipynb
@@ -415,19 +415,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "-_TbPk14Bjo3"
-      },
-      "source": [
-        "bro when will this shit end?\n",
-        "\n",
-        "f this it shold be done in ~2h. im going to sleep\n",
-        "xyz to net get kicked out\n",
-        "bro stop"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "iybyZxd3oTXP"
       },
       "source": [
@@ -437,7 +424,7 @@
         "\n",
         "As such, considering the inclusion of default parameters in the grid (n_estimators=100, min_samples_split=2, min_samples_leaf=1) the accuracy should be higher or the same as in the model using default parametes.\n",
         "\n",
-        "In case of RandomizedSearchCV, final model performance may be lower.well fx4?"
+        "In case of RandomizedSearchCV, final model performance may be lower."
       ]
     },
     {
